objects/CIP_History_SME_Approval__c.object
<CustomObject>
    <fields>
        <fullName>AE_Region__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AE Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_Implementer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assigned Implementer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIP_Claims_System__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CIP Claims System</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIP_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CIP Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CIP_History__c</fullName>
        <label>CIP History</label>
        <referenceTo>Client_Intake_Process_History__c</referenceTo>
        <relationshipLabel>CIP History SME Approvals</relationshipLabel>
        <relationshipName>CIP_History_SME_Approvals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CIP_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CIP Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIP_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CIP Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Location__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Claim Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Created Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Service__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Service Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Division Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GS Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Services_Email_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Services Email Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Services_Last_Modified_by_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Services Last Modified by Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HPCC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HPCC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Other, List Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAA_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JAA Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Group_Last_Modified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Modified By &lt;&gt; Group Last Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Benefits_HOLD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Benefits HOLD</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Benefits_Strings_Tables_or_Cont__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Strings/Tables/Contract Codes impacted?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified_Date_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Modified Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>No_Production_Date_SME_Dept__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Production Date SME Dept</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Production_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Legacy_Client_Intake_Process__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDC Legacy Client Intake Process</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SME_Approval_Name_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SME Approval Name:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SME_Approver__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SME Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SME_Department__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SME Department</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selections_Report_Required__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Selections Report Required</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UWR__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UWR</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>CIP History SME Approval</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CIP History SME Approval Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CIP History SME Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>